FIX - Scrollbar colors for CLIENTS select2

--- a/lcars.css
+++ b/lcars.css
@@ -1,6 +1,6 @@
 /*
 	- Document: Pi-hole LCARS Star Trek Picard Theme
-	- Version:  1.3.0
+	- Version:  1.3.1
 	- Author:   @MichalSvatos (svatos.dev)
 	- Description: Star Trek Picard LCARS Theme for Pi-hole dashboard.
 	- Disclaimer: Due to fact that I have the access only to CSS I was forced to use some !importants and a lot of IDs. I'm sorry.
@@ -95,21 +95,24 @@ html {
 /* --- Chrome & Safari scrollbar */
 html::-webkit-scrollbar,
 .wrapper::-webkit-scrollbar,
-#output::-webkit-scrollbar {
+#output::-webkit-scrollbar,
+.select2-results__options::-webkit-scrollbar {
 	width: var(--gap50);
 	height: var(--gap50);
 }
 
 html::-webkit-scrollbar-thumb,
 .wrapper::-webkit-scrollbar-thumb,
-#output::-webkit-scrollbar-thumb {
+#output::-webkit-scrollbar-thumb,
+.select2-results__options::-webkit-scrollbar-thumb {
 	background: var(--color-primary);
 	border-radius: var(--radius25);
 }
 
 html::-webkit-scrollbar-track,
 .wrapper::-webkit-scrollbar-track,
-#output::-webkit-scrollbar-track {
+#output::-webkit-scrollbar-track,
+.select2-results__options::-webkit-scrollbar-track {
 	background: var(--color-disabled);
 }
 
